# -student-opportunity-finder

./: .dockerignore  .env.example  Dockerfile  README.md  app.py  baseline.py  debug.py  environment.py  exams_data.py  graders.py  index.html  inference.py  models.py  multiturn_environment.py  multiturn_graders.py  multiturn_models.py  openenv.yaml  pyproject.toml  requirements.txt  scholarships_data.py  serve.py  setup.sh  test_app.py  test_multiturn_env.py  test_setup.py
server/: app.py
